--- a/css/miao.css
+++ b/css/miao.css
@@ -35,11 +35,12 @@
 	border-radius: 50%;
 }
 body, html {  
-    height: 100%;  
+    /* height: 100%;   */
     margin: 0;  
     display: flex;  
     align-items: center; /* 垂直居中 */  
     justify-content: center; /* 水平居中 */  
+    transform: scale(0.9);
   }  
   
 .phone{
